force-app/main/default/objects/Collaborator_Contact_Role__c/Collaborator_Contact_Role__c.object-meta.xml
<CustomObject>
    <description>This is the junction object to define how contacts relate to opportunities.</description>
    <label>Collaborator Contact Role</label>
    <nameField>
        <displayFormat>CCR-{00000}</displayFormat>
        <label>Collaborator Contact Role Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Collaborator Contact Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>