force-app/main/default/objects/Collaborator_Contact_Role__c/fields/Collaboration_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Collaboration_Opportunity__c</fullName>
    <description>The collaboration opportunity.</description>
    <label>Collaboration Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Collaborator Contact Roles</relationshipLabel>
    <relationshipName>Collaborator_Contact_Roles</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>