force-app/main/default/objects/Collaborator_Contact_Role__c/fields/Collaborator_Contact__c.field-meta.xml
<CustomField>
    <fullName>Collaborator_Contact__c</fullName>
    <description>The collaborator contact.</description>
    <label>Collaborator Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Collaboration Opportunities</relationshipLabel>
    <relationshipName>Collaborator_Contact_Roles</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>