force-app/main/default/objects/Collaborator_Contact_Role__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <formula>HYPERLINK(&quot;/lightning/r/Contact/&quot; &amp; Collaborator_Contact__r.Id &amp; &quot;/view&quot;, Collaborator_Contact__r.FirstName &amp; &quot; &quot; &amp;  Collaborator_Contact__r.LastName )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Name</label>
    <type>Text</type>
</CustomField>