force-app/main/default/objects/Collaborator_Contact_Role__c/fields/Contact_Name_Text__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name_Text__c</fullName>
    <formula>&quot; &quot;+Collaborator_Contact__r.FirstName +&quot; &quot;+ Collaborator_Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Name Text</label>
    <type>Text</type>
</CustomField>