force-app/main/default/objects/Collaborator_Contact_Role__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>The role in which the contact will fill on the collaboration .</description>
    <label>Role</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Collaborator Scientific Contact</fullName>
            </value>
            <value>
                <fullName>Collaborator Laboratory Contact</fullName>
            </value>
            <value>
                <fullName>Collaborator Data Contact</fullName>
            </value>
            <value>
                <fullName>Collaborator Technology Transfer Office Contact</fullName>
            </value>
            <value>
                <fullName>Collaborator Business Contact</fullName>
            </value>
            <value>
                <fullName>Collaborator Legal Contact</fullName>
            </value>
            <value>
                <fullName>Collaborator Finance Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>